--- a/src/components/TitleInput/TitleInput.mdx
+++ b/src/components/TitleInput/TitleInput.mdx
@@ -20,7 +20,7 @@ export const MyForm = () => {
 
   return <FormProvider {...formMethods}>
     <form>
-      <DateTimeInput />
+      <TitleInput />
     </form>
   </FormProvider>
 };
